gcc: 	PR target/10338 	PR bootstrap/10198 	PR bootstrap/10140 	* fixinc/gnu-regex.c (regerror): Use mempcpy not __mempcpy.

libiberty:
	PR target/10338
	PR bootstrap/10198
	PR bootstrap/10140
	* getopt.c (exchange, _getopt_initialize): Use mempcpy not
	__mempcpy.
	* regex.c (regerror): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65634 138bc75d-0d04-0410-961f-82ee72b054a4